fix: handle mobile header overflow

--- a/src/features/Header/nav.module.css
+++ b/src/features/Header/nav.module.css
@@ -8,6 +8,9 @@
   gap: 5px;
   padding: 0 15px;
 
+  flex-shrink: 1;
+  min-width: 50px;
+
   .icon {
     height: 14px;
     width: 14px;
